<resources>
    <string name="app_name" translatable="false">Eat It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="categories">Categories</string>
    <string name="logout">Logout</string>
    <string name="meal">Meal</string>
    <string name="price">Price</string>
    <string name="favorite">Favorite</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="description">Description</string>
    <string name="show_comment">Show Comment</string>
    <string name="meal_detail">Meal Detail</string>
    <string name="rate_meal">Rate Meal</string>
    <string name="your_comments">Your comments</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="size">Size</string>
    <string name="addon">Addon</string>
    <string name="search">Search</string>
</resources>