<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    android:background="@drawable/top_corner"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/main_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/overLay" />

        <View
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="center"
            android:background="@color/overLay" />
    </LinearLayout>




    <TextView
        android:id="@+id/tv_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:padding="@dimen/_4sdp"
        android:text="@string/rate_meal"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_view" />

    <RatingBar
        android:id="@+id/rB_food"
        style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rate_title"
        tools:text="@string/popular_categories" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvl_rate_comments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:hint="@string/your_comments"
        android:padding="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rB_food">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:gravity="center|start"
            android:lines="3"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/teal_700"
            android:textColorHint="@color/overLay"
            android:textSize="18sp"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_okay"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvl_rate_comments" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvl_rate_comments" />

</androidx.constraintlayout.widget.ConstraintLayout>